<resources>
    <string name="app_name">Inteligents Cities</string>
    <string name="share_preferencees_file" translatable="false">Shared Preferences File</string>
    <string name="id_shrpref" translatable="false">id</string>
    <string name="id">ID</string>
    <string name="reporte_problema">Report Problem</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="hint1">Add a title</string>
    <string name="hint2">Add a description</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="empty">Blank Title/Description: Not inserted</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="hint3">Update Title</string>
    <string name="hint4">Update description</string>
    <string name="blank_edit">Title/Description Blank: Not edited</string>
    <string name="delete">Note deleted</string>
    <string name="alert">Alert</string>
    <string name="del">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="mine">Mine</string>
    <string name="all">All</string>
    <string name="remember">Remember Username</string>
    <string name="error">Incorrect Username/ Password</string>
    <string name="blank">Blank Username/ Password</string>
    <string name="errorOco">Error! Report not updated.</string>
    <string name="warn">Title / Description blank</string>
    <string name="failedLogin">Invalid Credentials</string>
    <string name="noUser">Blank Username</string>
    <string name="noPass">Blank Password</string>
    <string name="logout">Logout</string>
    <string name="selectImage">Choose Image</string>
    <string-array name="tipo">
        <item>Acidente</item>
        <item>Obras</item>
        <item>Saneamento</item>
    </string-array>
    <string name="acidents">Accidents</string>
    <string name="construction">Construction</string>
    <string name="sanitation">Sanitation</string>
    <string name="elim">Delete</string>
    <string name="Type">Report Type</string>
    <string name="user">Reported by:</string>
    <string name="image">Image</string>
</resources>